Se cambio la profesion

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
          <!-- Segundo commit: PROFESION  -->
         <div class="profile-data">
           <h1>Oscar B</h1>
-          <p>PROFESION</p>
+          <p>Ingeniero  </p>
         </div>
       </header>
       <div class="projects">
