--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <!-- Primer commit: Modificar nombre de la persona  -->
          <!-- Segundo commit: PROFESION  -->
         <div class="profile-data">
-          <h1>StevenB</h1>
+          <h1>Steven Bonilla M</h1>
           <p>Encargado de Informatica</p>
         </div>
       </header>
