--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
           <!-- Primer commit: Modificar nombre de la persona  -->
          <!-- Segundo commit: PROFESION  -->
         <div class="profile-data">
-          <h1>Steven Bonilla M</h1>
-          <p>Encargado de Informatica</p>
+          <h1>Steven Bonilla Morales </h1>
+          <p>Encargado de Informatica...</p>
         </div>
       </header>
       <div class="projects">
