--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
          <!-- Segundo commit: PROFESION  -->
         <div class="profile-data">
           <h1>StevenB</h1>
-          <p>Encargado de Informatica</p>
+          <p>Developer</p>
         </div>
       </header>
       <div class="projects">
