Se actualizo la profesion

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
          <!-- Segundo commit: PROFESION  -->
         <div class="profile-data">
           <h1>Steven Bonilla M</h1>
-          <p>Encargado de Informatica</p>
+          <p>Ingeniero Informatico</p>
         </div>
       </header>
       <div class="projects">
